modules/mmlFilter/style.css
#mmlFilter.closed {
    position: absolute;
   /*width: 100%;*/
    top: 0;
    right: 0;

}

#mmlFilter.open {
    position: relative;
    width: 39%;
    float:  right;
    height: 100%;
}

#mmlFilter-accordion{
    height: 89%;
    .panel {
        max-height: 80%;
        overflow: auto;
    }
    .panel.open {
        height:80%;
    }
}

#mmlFilter.closed #div-mmlFilter-content{
    display:none;
}



#mmlFilter .panel-heading {
    padding: 15px 20px 15px 0px;
}

#mmlFilter .panel-body {
    border: 0;
    padding-left: 25px;
    padding-top: 0px;
}


/**********************************
Reset-Knopf in Kategorien auf Desktop
**********************************/
#div-mmlFilter-reset {
    height: 45px;
    border-radius: 3px !important;
    border: solid 1px rgba(0, 0, 0, 0.18);
    text-align: center;
    color: black;
    margin-bottom: 10px;
}

#div-mmlFilter-reset:hover{
    background-color: #0f5cad;
    color: white;
    cursor: pointer;
}

#div-mmlFilter-reset-text {
    font-size: 14px;
    line-height: 3.3;
}

/**********************************
Reset-Knopf in Kategorien auf Mobile
**********************************/
#div-mmlFilter-reset-mobile {
    height: 45px;
    border-radius: 3px !important;
    border: solid 1px rgba(0, 0, 0, 0.18);
    text-align: center;
    color: black;
    margin: 10px 40px 0px 20px;
}

#div-mmlFilter-reset-text-mobile {
    font-size: 14px;
    line-height: 3.3;
}

/**********************************
Filter-Knopf für Execute auf Desktop
**********************************/
#div-mmlFilter-execute {
    height: 45px;
    border-radius: 3px !important;
    border: solid 1px rgba(0, 0, 0, 0.18);
    text-align: center;
    color: white;
    background-color: #005ca9;
    position: relative;
    bottom: 7px;
    padding: 0px 75px;
    vertical-align : bottom;
}

#div-mmlFilter-execute:hover{
    cursor: pointer;
}

#div-mmlFilter-execute-text {
    font-size: 14px;
    line-height: 3.3;
}

/**********************************
Filter-Knopf für Execute auf Mobile
**********************************/
#div-mmlFilter-execute-mobile {
    height: 45px;
    border-radius: 3px !important;
    border: solid 1px rgba(0, 0, 0, 0.18);
    text-align: center;
    color: white;
    background-color: #005ca9;
    position: absolute;
    bottom: 20px;
    right: 15px;
    left: 15px;
}

#div-mmlFilter-execute-text-mobile {
    font-size: 14px;
    line-height: 3.3;
}

/**********************************
Filterabschnitte auf Desktop
**********************************/
.div-mmlFilter-filter {
    line-height: 2.73;
    color: #333333;
    display: block;
}

#mmlFilter .div-mmlFilter-filter-header {
    font-weight: bold;
    line-height: 24px;
    color: #003063;
    min-width: 200px;
    font-size: 15px;
    letter-spacing: -0.4px;
    text-align: center;
    padding: 0px 25px;
    font-family: HamburgSans;
    text-decoration: none;
}

/**********************************
Filterabschnitte auf Mobile
**********************************/
.div-mmlFilter-filter-mobile {
    line-height: 2.73;
    color: #333333;
    padding: 0px 0px 0px 15px !important;
    margin-right: 0px;
    overflow: auto;
    display: block;
    max-height: calc("100%" - "345px");
}

.div-mmlFilter-filter-header-mobile {
    font-weight: bold;
    line-height: 1.62;
    color: #333333;
    min-width: 200px;
    font-size: 17px;
    letter-spacing: -0.5px;
/*    padding: 22px 25px 0px 25px;*/
}

.div-mmlFilter-filter-header-span-mobile {
    float: right;
    color: #666666;
    right: 6px;
    font-size: 14px;
}

.div-mmlFilter-panel-mobile {
    background: none !important;
    border: none !important;
    -webkit-box-shadow: none !important;
    margin-bottom: 0px !important;
}

.div-mmlFilter-panel-heading-mobile {
    background: none !important;
    border: none !important;
    -webkit-box-shadow: none !important;
    height: 50px;
}

/**********************************
Überschrift auf Mobile
**********************************/
.div-mmlFilter-header-mobile {
    margin: 5px 0px 0px 15px;
    font-size: 20px;
    line-height: 1.38;
    color: #333333;
    min-width: 200px;
    letter-spacing: -0.6px;
    height: 55px;
}

.div-mmlFilter-header-close-mobile {
    float: right;
    text-shadow: 0 1px 0 #ffffff;
    border: none;
    background: none;
    width: 55px;
    height: 55px;
    padding: 5px 0px 0px 0px;
}

.div-mmlFilter-header-text-mobile {
    font-size: 20px;
    font-weight: bold;
    top: 17px;
    position: relative;
}

/**********************************
gesamtes Filterwindow Desktop
**********************************/
#div-mmlFilter-content {

    display : block;
    overflow: auto;
    height: 100%;
    font-family: HamburgSans;
    font-size: 15px;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: -0.4px;
    line-height: 2.73;
    position: relative;
    /*right: -45px;
    top: -100%;*/
    background-color: white;
    width: 100%;
    color: #333333;
    border-radius: 1px !important;
}


#fromDateDiv {
    width: 200px;
}
#toDateDiv {
    width: 200px;
}
.mml-white {
    background: none !important;
    border: none !important;
    -webkit-box-shadow: none !important;
}
.ui-widget-content .ui-icon {
    background-image: url("../img/bootstrap-datepicker/ui-icons_444444_256x240.png") !important;
}
.panel-collapse {
    overflow: auto;
    margin: 15px 0;
}

/**********************************
gesamtes Filterwindow auf Mobile
**********************************/
#div-mmlFilter-content-mobile {
    font-family: HamburgSans;
    font-size: 15px;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: -0.4px;
    line-height: 2.73;
    height: calc("100%" - "40px");
    height: -moz-calc("100%" - "40px");
    height: -webkit-calc("100%" - "40px");
    color: #333333;
    background-color: #f2f2f2;
    right: 15px;
    left: 15px;
    top: 20px;
    bottom: 20px;
    border: none;
    -webkit-border-radius:  0px;
    -moz-border-radius:     0px;
    -o-border-radius:       0px;
    -ms-border-radius:      0px;
    -moz-box-shadow:    0px;
}

#div-mmlFilter-modal-dialog {
    margin: 0px;
}

#mmlZeitraum {
    overflow: visible;
}

/**********************************
Checkbox
**********************************/
.mml-checkbox {
    -webkit-appearance: none;
    border: 1px solid #cacece;
    opacity: 0.5;
    border-radius: 2px;
    display: inline-block;
    position: relative;
    height: 20px;
    width: 20px;
}
.mml-checkbox:hover {
    cursor: pointer;
}
.mml-checkbox:checked {
    color: #99a1a7;
    opacity: 1;
}
.mml-checkbox:checked:after {
    content: '\2714';
    position: absolute;
    left: 3px;
    top: 0px;
    height:100%;
    border-radius: 2px
    border: solid 2px #333333;
    color: #333333;
}

.mmlFilter-checkbox-span {
    bottom: 3px;
    position: relative;
}

/**********************************
Hilfsklassen
**********************************/

.unselectable {
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none;          /* Likely future */
}
.mml-blue {
    color: #003063;
}
.float-right {
    float: right;
}
.margin-right-only {
    margin: 0px 20px -3px 0px !important;
}

.margin-topright {
    margin: 15px 20px 0px 0px !important;
}

.margin-leftright {
    margin: 0px 20px 0px 0px !important;
}

.datepicker {
    height: 30px;
}
.ui-datepicker-inline {
        width: 270px;
}
.btn-calendar {
    float: left;
    height: 34px;
    width: 34px;
}
.zoom {
    zoom: 1.5;
}

.ui-datepicker {
    position: absolute;
    top: 34px;
    right: 0px;
    z-index: 100;

}
.ui-datepicker-header {
    background-color: white
}
.ui-state-default {
    width: 34px !important;
    height: 31px !important;
    border-radius: 3px !important;
    border-color: white !important;
    background: white !important;
    line-height: 2.29 !important;
    letter-spacing: normal !important;
    text-align: center !important;
    color: #212121 !important;
}
.ui-state-highlight {
    background: #ddd !important;
}
.ui-state-active {
    background: #666666 !important;
    color: #fff !important;
}

.mmlFilter-datetype {
    margin: 0px 30px 15px 0px;
    height: 45px;
    border: 0;
    float: right;
}

.mmlFilter-datetype-span {
    margin: 0px 10px 0px 15px;
    height: 45px;
}

